[project]
name = "daft-connect-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio-status>=1.68.1",
    "grpcio>=1.68.1",
    "pandas>=2.2.3",
    "protobuf>=5.29.1",
    "setuptools>=75.6.0",
    "getdaft",
    "jupyterlab>=4.3.3",
    "kagglehub>=0.3.5",
    "pyspark[connect]>=3.5.3",
]

#[[tool.uv.index]]
#url = "https://pypi.anaconda.org/daft-nightly/simple"

[tool.uv.sources]
getdaft = { git = "https://github.com/Eventual-Inc/Daft.git" }

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
